fix bug where timestamp on comments is cut off when info bar is too long

--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -45,6 +45,11 @@
   white-space: nowrap;
 }
 
+.Comment .info .left {
+  display: flex;
+  overflow: hidden;
+}
+
 .Comment .info .author {
   font-family: "SFUIText-Medium";
   color: black;
